cabal-version:          3.0
name:                   Hustle
version:                0.1.0.0
synopsis:               Haskell implementation of the KDL Document Language
description:            See <https://github.com/fuzzypixelz/Hustle#readme>
homepage:               https://github.com/fuzzypixelz/hustle
bug-reports:            https://github.com/fuzzypixelz/Hustle/issues
license:                MIT
license-file:           LICENSE
author:                 Mahmoud Mazouz
maintainer:             hello@fuzzypixelz.com
category:               Data
build-type:             Simple
extra-doc-files:        CHANGELOG.md

tested-with: GHC ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2

source-repository head
  type: git
  location: https://github.com/fuzzypixelz/Hustle

common warnings
    ghc-options:        -Wall

common depends
    build-depends:
        base >=4.18.3.0 && < 5,
        containers,
        megaparsec,
        prettyprinter,
        scientific,
        text

library
    import:
        warnings,
        depends
    exposed-modules:    KDL
    other-modules:
        KDL.Formatter,
        KDL.Internal,
        KDL.Parser,
        KDL.Types
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite Hustle-test
    import:
        warnings,
        depends
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    build-depends:
        Hustle,
        QuickCheck,
        hspec,
        directory,
        filepath

executable hustle-fmt
    import:
        warnings,
        depends
    default-language:   Haskell2010
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -O2
    hs-source-dirs:     hustle-fmt
    main-is:            Main.hs
    build-depends:      Hustle
